--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -1,18 +1,24 @@
 name: NASA Project CI
 on:
   push:
-    branches: [ master ]
-  pull_request: 
-    branches: [ master ]
-  jobs:
-    build:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v2
-        - name: Use Node.js version 16
-        - uses: actions/setup-node@v2
-          with:
-            node-version: '16'
-        - run: npm install
-        - run: npm run build --prefix client
-
+    branches: master
+  pull_request:
+    branches: master
+jobs:
+  build:
+    env:
+      CI: true
+      MONGO_URL: mongodb://localhost/nasa
+    strategy:
+      matrix:
+        node-version: [14.x, 16.x]
+        mongodb-version: ["4.4"]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+        name: Use Node.js version ${{ matrix.node-version }}
+      - uses: actions/setup-node@v2
+      - name: Use mongodb from GitHub actions
+        uses: supercharge/mongodb-github-action@1.8.0
+      - run: npm install
+      - run: npm run build --prefix client
