--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     env:
       CI: true
-      MONGO_URL: mongodb://localhost/nasa
+      MONGO_URL: mongodb://127.0.0.1:27017/nasaProject
     strategy:
       matrix:
         node-version: [14.x, 16.x]
